--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Demo</title>
+    <style>
+        inputs.error {
+            background-color: gray;
+        }
+        label.error {
+            color: crimson;
+            font-size: smaller;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
 
